--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,14 +14,22 @@
  *= require_self
  */
   
+  
+  body {
+   /*Gradient provided by @_ighosh at uiGradients.com*/
+   background: #83a4d4;  /* fallback for old browsers */
+   background: -webkit-linear-gradient(to right, #b6fbff, #83a4d4);  /* Chrome 10-25, Safari 5.1-6 */
+   background: linear-gradient(to right, #b6fbff, #83a4d4); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+      }  
+  
   h1, h2 h3 {
   font-family: 'Montserrat', sans-serif;
   font-family: 'Roboto', sans-serif;
   }
   
   /*Nav Styles*/
-.navbar {
-   /*border-bottom: 1px solid #fff;*/
+  .navbar {
   margin-bottom: 20px;
-  background-color:#333;
+  background-color:#555;
 }
