--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -15,21 +15,28 @@
  */
   
   
-  body {
-   /*Gradient provided by @_ighosh at uiGradients.com*/
-   background: #83a4d4;  /* fallback for old browsers */
-   background: -webkit-linear-gradient(to right, #b6fbff, #83a4d4);  /* Chrome 10-25, Safari 5.1-6 */
-   background: linear-gradient(to right, #b6fbff, #83a4d4); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 
-      }  
-  
-  h1, h2 h3 {
-  font-family: 'Montserrat', sans-serif;
-  font-family: 'Roboto', sans-serif;
-  }
-  
+   
   /*Nav Styles*/
   .navbar {
-  margin-bottom: 20px;
-  background-color:#555;
+    margin-bottom:20px;
+    background-color:#555;
 }
+  
+  h1, h2 h3 {
+    font-family: 'Montserrat', sans-serif;
+    font-family: 'Roboto', sans-serif;
+  }
+  
+  .home-callout {
+     margin-top: -20px;
+     padding-top: 50px;
+     padding-bottom: 80px;
+    /*Gradient provided by @_ighosh at uiGradients.com*/
+     background: #83a4d4;  /* fallback for old browsers */
+     background: -webkit-linear-gradient(to right, #b6fbff, #83a4d4);  /* Chrome 10-25, Safari 5.1-6 */
+     background: linear-gradient(to right, #b6fbff, #83a4d4); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+     color:#fff;
+  }
+  
+  
