--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -17,26 +17,36 @@
   
 
    
-  /*Nav Styles*/
-  .navbar {
-    margin-bottom:20px;
-    background-color:#555;
+/*Nav Styles*/
+.navbar {
+  margin-bottom:20px;
+  background-color:#555;
+}
+
+.navbar-nav {
+ font-size: 17px 
+}
+
+.navbar-brand:hover, .navbar-nav:hover {
+  opacity: 0.75;
+}
+
+
+  
+h1, h2 h3 {
+  font-family: 'Montserrat', sans-serif;
+  font-family: 'Roboto', sans-serif;
 }
   
-  h1, h2 h3 {
-    font-family: 'Montserrat', sans-serif;
-    font-family: 'Roboto', sans-serif;
-  }
-  
-  .home-callout {
-     margin-top: -20px;
-     padding-top: 50px;
-     padding-bottom: 80px;
-    /*Gradient provided by @_ighosh at uiGradients.com*/
-     background: #83a4d4;  /* fallback for old browsers */
-     background: -webkit-linear-gradient(to right, #b6fbff, #83a4d4);  /* Chrome 10-25, Safari 5.1-6 */
-     background: linear-gradient(to right, #b6fbff, #83a4d4); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-     color:#fff;
-  }
+.home-callout {
+   margin-top: -20px;
+   padding-top: 50px;
+   padding-bottom: 80px;
+  /*Gradient provided by @_ighosh at uiGradients.com*/
+   background: #83a4d4;  /* fallback for old browsers */
+   background: -webkit-linear-gradient(to right, #b6fbff, #83a4d4);  /* Chrome 10-25, Safari 5.1-6 */
+   background: linear-gradient(to right, #b6fbff, #83a4d4); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+   color:#fff;
+}
   
   
