--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -1,1 +1,12 @@
-<h2>Contact Us</h2>
+<div class= container>
+  <h2>Contact Us</h2>
+  <%= form_for "/contacts" do |f| %>
+   <%= f.label :name %>
+   <%= f.text_field :name %>
+   <%= f.label :email %>
+   <%= f.text_field :email %>
+   <%= f.label :comments %>
+   <%= f.text_area :comments %>
+   <%= f.submit 'submit'%>
+  <% end %>
+</div>
