--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,7 +32,7 @@
             
             <!--<a class="nav-link active"  aria-current="page" href="/about">About</a>-->
             <%= link_to "About", about_path, class: "nav-link" %>
-           
+            <%= link_to "Contact Us", new_contact_path, class: "nav-link" %>
           </div>
         </div>  
       </div>
